--- a/project_2.html
+++ b/project_2.html
@@ -21,10 +21,10 @@
             Dropdown
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Yes</a>
+            <a class="dropdown-item" href="#">No</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item" href="#">Maybe</a>
           </div>
         </li>
       </ul>
