--- a/project_2.html
+++ b/project_2.html
@@ -45,6 +45,8 @@
   </nav>
 
   <div class="container">
+    <img src="C:\Users\Tony Duron\Project_2\piggy.jpg" alt="Spongebob!" />
+  <br>
     <div class="jumbotron">
       <h1 class="display-4">Is The Customer Always Right?</h1>
       <p class="lead">Do Surveys Really Matter?</p>
