--- a/project_2.html
+++ b/project_2.html
@@ -51,7 +51,7 @@
       <hr class="my-4">
       <p>Here we can display some more text!</p>
       <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-      <img src="C:\Users\Tony Duron\Project_2\piggy.jpg" alt="Spongebob!" />
+      <img src="https://nofilmschool.com/sites/default/files/styles/article_wide/public/ray_liotta.jpg?itok=NMfIm8iU" alt="Spongebob!" />
     </div>
   </div>
 
