--- a/project_2.html
+++ b/project_2.html
@@ -49,9 +49,8 @@
       <h1 class="display-4">Is The Customer Always Right?</h1>
       <p class="lead">Do Surveys Really Matter?</p>
       <hr class="my-4">
-      <p>Here we can display some more text!</p>
       <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-      <img src="https://nofilmschool.com/sites/default/files/styles/article_wide/public/ray_liotta.jpg?itok=NMfIm8iU" alt="Spongebob!" />
+      <img src="https://nofilmschool.com/sites/default/files/styles/article_wide/public/ray_liotta.jpg?itok=NMfIm8iU" alt="Give Me My Money!" />
     </div>
   </div>
 
