--- a/project_2.html
+++ b/project_2.html
@@ -6,6 +6,12 @@
   <title>Project 2!!!</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
+  <style>
+  body  {
+      background-image: url("https://nofilmschool.com/sites/default/files/styles/article_wide/public/ray_liotta.jpg?itok=NMfIm8iU");
+      background-color: #3f4274;
+    }
+    </style>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
