--- a/project_2.html
+++ b/project_2.html
@@ -9,7 +9,11 @@
   <style>
   body  {
       background-image: url("https://nofilmschool.com/sites/default/files/styles/article_wide/public/ray_liotta.jpg?itok=NMfIm8iU");
+      background-repeat: no-repeat;
+      background-size: auto;
       background-color: #3f4274;
+      background-attachment: fixed;
+      background-position: center;
     }
     </style>
 </head>
@@ -50,13 +54,6 @@
     </div>
   </nav>
 
-  <div class="container">
-    <div class="jumbotron">
-      <h1 class="display-4">Is The Customer Always Right?</h1>
-      <p class="lead">Do Surveys Really Matter?</p>
-      <hr class="my-4">
-      <img src="https://nofilmschool.com/sites/default/files/styles/article_wide/public/ray_liotta.jpg?itok=NMfIm8iU" alt="Give Me My Money!" />
-    </div>
-  </div>
+
 
  
