--- a/alt_version.html
+++ b/alt_version.html
@@ -32,9 +32,9 @@ body {
 
 <div class="smiley-image"></div>
 
-<p><div class="body-text">
+<div class="body-text">
     <h1 style="font-size:40px"><p style="color:rgb(247, 240, 240);">What Do Customer Surveys Really Tell Us?</p></h1>
-  </div></p>
+</div>
 
 </body>
 </html>
