--- a/project_2.html
+++ b/project_2.html
@@ -6,7 +6,7 @@
   <title>Project 2!!!</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="./Resources/styles/style.css">
-
+  
  
 </head>
 <body>
@@ -57,6 +57,7 @@ window.onclick = function(event) {
 
 </div>
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
 <div class="chart"></div>
 <div class="chart1"></div>
 <div class="chart2"></div>
