--- a/project_2.html
+++ b/project_2.html
@@ -44,8 +44,8 @@ window.onclick = function(event) {
   <button onclick="myFunction()" class="dropbtn">Menu</button>
   <div id="myDropdown" class="dropdown-content">
     <a href="#home">Distribution of Scores</a>
-    <a href="#about">About</a>
-    <a href="#contact">Contact</a>
+    <a href="#about">Average Satisfaction Rating</a>
+    <a href="#contact">Satisfaction Rating by ZipCode</a>
   </div>
 </div>
 
