--- a/Resources/project_2_1.html
+++ b/Resources/project_2_1.html
@@ -45,8 +45,8 @@
   <button onclick="myFunction()" class="dropbtn">Dropdown</button>
   <div id="myDropdown" class="dropdown-content">
     <a href="#home">Distribution of Scores</a>
-    <a href="#about">About</a>
-    <a href="#contact">Contact</a>
+    <a href="#about">Average Satisfaction Rating</a>
+    <a href="#contact">Satisfaction Rating by ZipCode</a>
   </div>
 </div>
 <script>
